--- a/.delivery/config.json
+++ b/.delivery/config.json
@@ -4,7 +4,15 @@
     "name": "build-cookbook",
     "path": ".delivery/build-cookbook"
   },
-  "skip_phases": [],
-  "build_nodes": {},
-  "dependencies": []
+  "delivery-truck": {
+    "publish": {
+      "chef_server": true
+    }
+  },
+  "skip_phases": [
+  "quality",
+  "security",
+  "smoke"
+  ],
+  "build_nodes": {}
 }
