publishing to supermarket and bumping version

--- a/.delivery/config.json
+++ b/.delivery/config.json
@@ -6,7 +6,8 @@
   },
   "delivery-truck": {
     "publish": {
-      "chef_server": true
+      "chef_server": true,
+      "supermarket": "https://cad-supermarket"
     }
   },
   "skip_phases": [
